# impossible-game

./: CMakeLists.txt  README.md
resources/: README.md
src/: Main.cpp
src/core/: Camera.h  GeometryChunk.h  IndexBuffer.cpp  IndexBuffer.h  Logger.cpp  Logger.h  RenderChunk.h  RenderQueue.h  Renderer.cpp  Renderer.h  ShaderProgram.h  Stream.h  StreamFactory.h  VertexBuffer.cpp  VertexBuffer.h  VertexTypes.h
src/core/desktop/: BGFXWindow.h  DesktopStreamFactory.h  FileStream.cpp  FileStream.h  InputHandler.h
src/game/: Camera.h  CameraSystem.cpp  CameraSystem.h  EntityRegistry.cpp  EntityRegistry.h  EntitySystem.h  FrameTimer.h  Game.cpp  Game.h  GameComponents.h  GameConfig.h  GameFactory.h  RenderComponent.h  RenderSystem.cpp  RenderSystem.h
src/impossible/: BaseComponents.h  MovementSystem.cpp  MovementSystem.h  TheImpossibleGame.cpp  TheImpossibleGame.h
